# NanoPDF

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: config.py  main.py
backend/routes/: __init__.py  compress.py  image_to_pdf.py  merge.py  pdf_to_image.py  preview.py  split.py
backend/services/: pdf_service.py
backend/tests/: conftest.py  test_compress.py  test_health.py  test_image_to_pdf.py  test_merge.py  test_pdf_to_image.py  test_preview.py  test_split.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DownloadButton.test.tsx  DownloadButton.tsx  ErrorToast.tsx  FeatureCard.test.tsx  FeatureCard.tsx  FileDropzone.test.tsx  FileDropzone.tsx  Layout.tsx  ProcessingSpinner.tsx
frontend/src/lib/: api.ts
frontend/src/lib/__mocks__/: api.ts
frontend/src/pages/: Compress.tsx  Home.test.tsx  Home.tsx  ImageToPdf.tsx  Merge.test.tsx  Merge.tsx  PdfToImage.tsx  Preview.tsx  Split.tsx
